initial project set up

--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ DS_Store
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
-
+*.dSYM
 # Dependency directories (remove the comment below to include it)
 # vendor/
 *.idea/
