--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ DS_Store
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 *.dSYM
+cool
 # Dependency directories (remove the comment below to include it)
 # vendor/
 *.idea/
